# app/api-spec.yaml
@@ -50,30 +50,42 @@ paths:
                   format: binary
                   
                   
-  # /network/{longitude}/{latitude}:
-  #   get:
-  #     tags:
-  #       - Network
-  #     operationId: app.get_all_cities
-  #     summary: Get all networks
-  #     parameters:
-  #       - name: limit
-  #         in: query
-  #         schema:
-  #           type: integer
-  #           minimum: 0
-  #           default: 100
-  #     responses:
-  #       '200':
-  #         description: Success
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: array
-  #               items:
-  #                 $ref: '#/components/schemas/Network'
-  #       '500':
-  #         description: Failure
+  /network/{longitude}/{latitude}:
+    get:
+      tags:
+        - Network
+      operationId: app.api.get_network_coverage
+      summary: Get network coverage for given location
+      parameters:
+        - name: longitude
+          in: path
+          required: true
+          
+          schema:
+            type: number
+            default: 100.5
+            minimum: -99999.99
+            maximum: 99999.99
+           
+        - name: latitude
+          in: path
+          required: true
+          schema:
+            type: number
+            minimum: -99999.99
+            maximum: 99999.99
+            default: 120.5
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Network'
+        '500':
+          description: Failure
       
     
     
